# CS673OLSum25Team3

./: .gitignore  CS673_ProgressReport_team3.xlsx  README.md  team.md
.githooks/: commit-msg  pre-commit
.github/: release.yml
.github/workflows/: README.md  ci.yml  code-scanning.yml
code/: .env  .env.example  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.db  Readme.md  compose.yml  docker-cmd.sh  docker-compose-dev.yml  docker-compose.caddy.yml  docker-compose.yml  nginx.conf  requirements.txt
code/backend/: Dockerfile
code/backend/.devcontainer/: devcontainer.json
code/backend/getactivecore/: application.properties  build.gradle
code/frontend/: README.md  nginx.conf  package-lock.json  package.json  vite.config.js
code/frontend/.devcontainer/: Dockerfile  devcontainer.json
code/frontend/src/: App.jsx
code/getactivecore/.runconfiguration/: Tests.run.xml
code/mymedic-backend/: README.md  pyproject.toml
code/mymedic-backend/src/mymedic_backend/cli/: main.py
code/mymedic-frontend/: README.md
code/mymedic/mymedic/: settings.py
code/mymedic/users/: forms.py  models.py  urls.py  utils.py  views.py
code/website/appointments_backend/: appointments.db  appointments.py  appointments_db.py
code/website/data_mockup/: appointments.json  (+1 more)
demo/: CS673_finalpresentation_team3.md
doc/: CS673_MeetingMinutes_team3.docx  CS673_ProgressReport_team3.xlsx  CS673_SDD_team3.docx  CS673_SPPP_RiskManagement_team3.xlsx  CS673_SPPP_team3.docx  CS673_STD_team3.docx  CS673_presentation0_team3.pptx  CS673_presentation2_team3.pptx
doc/lab1/: team.md
(+75 files in other folders)
